# pyo3-Levenshtein

./: Cargo.toml  README.md  pyproject.toml  rapidfuzz-levenshtein.md  run-cargo-tests.sh
benchmarking/: benchmarks.py  benchmarks_multi.py  benchmarks_single.py  pure_python_impl.py
python/pyo3_levenshtein/: __init__.py  pyo3_levenshtein.pyi
src/: lib.rs
tests/: stub_sample.py  test_batch.py  test_type_stubs.py
