[package]
name = "pyo3-levenshtein"
version = "0.2.2"
edition = "2024"

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py310"] }
rayon = "1.10"
once_cell = "1.20"
dashmap = "6.1"

[features]
default = []
extension-module = ["pyo3/extension-module"]

[lib]
name = "pyo3_levenshtein"
crate-type = ["cdylib", "rlib"]
