[project]
name = "pyo3-levenshtein"
version = "0.2.1"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "levenshtein>=0.27.3",
    "pytest>=9.0.1",
    "pytest-benchmark>=5.2.3",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
